# MerkleTree

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  compile_commands.json  genFiles.py  main.c  main_tests.c  merkleTree  merkle_tree  rmFiles.py  test_spec.txt  tests_results.txt
data/: block_3.txt
data/transactions/: block_0.txt  block_1.txt  block_2.txt  block_3.txt  block_4.txt
inc/: merkleTree.h  node.h  tests.h  utils.h
src/: merkleTree.c  node.c  tests.c  utils.c
